lib/monograph/latex.treetop
require 'monograph/latex_nodes'

grammar Latex

  rule document
    ( whitelist / register / public / comment / part / chapter / section / figure / whitespace )+ <DocumentNode>
  end

  rule whitelist
    "%" spaces "whitelist:" spaces username spaces password  <WhitelistNode>
  end

  rule register
    "%" spaces "register:" spaces username spaces password  <RegisterNode>
  end

  rule public
    "%" spaces "public:" spaces username <PublicNode>
  end

  rule comment
    "%" (!"\n" . )+ <CommentNode>
  end

  rule figure
    "\\begin{figure}" whitespace? show:show? ( !"{" . )+ "{" path "}" whitespace? "\\caption{" caption "}" ( !"\\end" . )+ "\\end{figure}" <FigureNode>
  end

  rule caption
    ( !"}" . )+
  end

  rule path
    ( !"}" . )+
  end

  rule username
    ( !(" " / "\n" ) . )+
  end

  rule password
    ( !(" " / "\n" ) . )+
  end

  # I'm just going to parse and ignore these
  rule part
    "\\part{" ( !"}" . )+ "}" <PartNode>
  end

  # I'm just going to parse and ignore these
  rule chapter
    "\\chapter{" ( !"}" . )+ "}" <ChapterNode>
  end

  # Meat + Potatoes
  rule section
    section_start heading "}" whitespace show:show? whitespace? entry <SectionNode>
  end

  rule show
    "%" spaces "show:" spaces sequence:(username spaces)+ newline <ShowNode>
  end

  rule entry
    ( !non_entry ( "\\%" / . ) )+ <EntryNode>
  end

  rule non_entry
    section_start / chapter_start / part_start / ( !"\\%" "%" ) / figure_start
  end

  rule section_start
    "\\section{"
  end

  rule chapter_start
    "\\chapter{"
  end

  rule part_start
    "\\part{"
  end

  rule figure_start
    "\\begin{figure}"
  end

  rule date
    month spaces day spaces "$^{" ( !"}" . )+ "}$," spaces year <DateNode>
  end

  rule heading
    date / ( !"}" . )* <HeadingNode>
  end

  rule month
    ( "January" / "February" / "March" / "April" / "May" / "June" / "July" / "August" / "September" / "October" / "November" / "December" ) <MonthNode>
  end

  # I'll be fucked if it's ever January 100th
  rule day
    [0-9] 1..2 <DayNode>
  end

  # TODO fix for Y10K
  rule year
    [0-9] 4..4 <YearNode>
  end

  # Treetop does not separate lexing from parsing. Must consume all input.
  rule whitespace
    ( " " / newline )+ <WhitespaceNode>
  end

  rule spaces
    ( " " )*
  end

  rule eop
    newline 2..
  end

  rule newline
    "\n"
  end

end
