lib/monograph/latex.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


require 'monograph/latex_nodes'

module Latex
  include Treetop::Runtime

  def root
    @root ||= :document
  end

  def _nt_document
    start_index = index
    if node_cache[:document].has_key?(index)
      cached = node_cache[:document][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1 = index
      r2 = _nt_whitelist
      if r2
        r1 = r2
      else
        r3 = _nt_register
        if r3
          r1 = r3
        else
          r4 = _nt_public
          if r4
            r1 = r4
          else
            r5 = _nt_comment
            if r5
              r1 = r5
            else
              r6 = _nt_part
              if r6
                r1 = r6
              else
                r7 = _nt_chapter
                if r7
                  r1 = r7
                else
                  r8 = _nt_section
                  if r8
                    r1 = r8
                  else
                    r9 = _nt_figure
                    if r9
                      r1 = r9
                    else
                      r10 = _nt_whitespace
                      if r10
                        r1 = r10
                      else
                        @index = i1
                        r1 = nil
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(DocumentNode,input, i0...index, s0)
    end

    node_cache[:document][start_index] = r0

    r0
  end

  module Whitelist0
    def spaces1
      elements[1]
    end

    def spaces2
      elements[3]
    end

    def username
      elements[4]
    end

    def spaces3
      elements[5]
    end

    def password
      elements[6]
    end
  end

  def _nt_whitelist
    start_index = index
    if node_cache[:whitelist].has_key?(index)
      cached = node_cache[:whitelist][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_spaces
      s0 << r2
      if r2
        if has_terminal?("whitelist:", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 10))
          @index += 10
        else
          terminal_parse_failure("whitelist:")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_spaces
          s0 << r4
          if r4
            r5 = _nt_username
            s0 << r5
            if r5
              r6 = _nt_spaces
              s0 << r6
              if r6
                r7 = _nt_password
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(WhitelistNode,input, i0...index, s0)
      r0.extend(Whitelist0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:whitelist][start_index] = r0

    r0
  end

  module Register0
    def spaces1
      elements[1]
    end

    def spaces2
      elements[3]
    end

    def username
      elements[4]
    end

    def spaces3
      elements[5]
    end

    def password
      elements[6]
    end
  end

  def _nt_register
    start_index = index
    if node_cache[:register].has_key?(index)
      cached = node_cache[:register][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_spaces
      s0 << r2
      if r2
        if has_terminal?("register:", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 9))
          @index += 9
        else
          terminal_parse_failure("register:")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_spaces
          s0 << r4
          if r4
            r5 = _nt_username
            s0 << r5
            if r5
              r6 = _nt_spaces
              s0 << r6
              if r6
                r7 = _nt_password
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(RegisterNode,input, i0...index, s0)
      r0.extend(Register0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:register][start_index] = r0

    r0
  end

  module Public0
    def spaces1
      elements[1]
    end

    def spaces2
      elements[3]
    end

    def username
      elements[4]
    end
  end

  def _nt_public
    start_index = index
    if node_cache[:public].has_key?(index)
      cached = node_cache[:public][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_spaces
      s0 << r2
      if r2
        if has_terminal?("public:", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 7))
          @index += 7
        else
          terminal_parse_failure("public:")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_spaces
          s0 << r4
          if r4
            r5 = _nt_username
            s0 << r5
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(PublicNode,input, i0...index, s0)
      r0.extend(Public0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:public][start_index] = r0

    r0
  end

  module Comment0
  end

  module Comment1
  end

  def _nt_comment
    start_index = index
    if node_cache[:comment].has_key?(index)
      cached = node_cache[:comment][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        if has_terminal?("\n", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("\n")
          r5 = nil
        end
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(Comment0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(CommentNode,input, i0...index, s0)
      r0.extend(Comment1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:comment][start_index] = r0

    r0
  end

  module Figure0
  end

  module Figure1
  end

  module Figure2
    def show
      elements[2]
    end

    def path
      elements[5]
    end

    def caption
      elements[9]
    end

  end

  def _nt_figure
    start_index = index
    if node_cache[:figure].has_key?(index)
      cached = node_cache[:figure][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("\\begin{figure}", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 14))
      @index += 14
    else
      terminal_parse_failure("\\begin{figure}")
      r1 = nil
    end
    s0 << r1
    if r1
      r3 = _nt_whitespace
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        r5 = _nt_show
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          s6, i6 = [], index
          loop do
            i7, s7 = index, []
            i8 = index
            if has_terminal?("{", false, index)
              r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("{")
              r9 = nil
            end
            if r9
              r8 = nil
            else
              @index = i8
              r8 = instantiate_node(SyntaxNode,input, index...index)
            end
            s7 << r8
            if r8
              if index < input_length
                r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("any character")
                r10 = nil
              end
              s7 << r10
            end
            if s7.last
              r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
              r7.extend(Figure0)
            else
              @index = i7
              r7 = nil
            end
            if r7
              s6 << r7
            else
              break
            end
          end
          if s6.empty?
            @index = i6
            r6 = nil
          else
            r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
          end
          s0 << r6
          if r6
            if has_terminal?("{", false, index)
              r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("{")
              r11 = nil
            end
            s0 << r11
            if r11
              r12 = _nt_path
              s0 << r12
              if r12
                if has_terminal?("}", false, index)
                  r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("}")
                  r13 = nil
                end
                s0 << r13
                if r13
                  r15 = _nt_whitespace
                  if r15
                    r14 = r15
                  else
                    r14 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r14
                  if r14
                    if has_terminal?("\\caption{", false, index)
                      r16 = instantiate_node(SyntaxNode,input, index...(index + 9))
                      @index += 9
                    else
                      terminal_parse_failure("\\caption{")
                      r16 = nil
                    end
                    s0 << r16
                    if r16
                      r17 = _nt_caption
                      s0 << r17
                      if r17
                        if has_terminal?("}", false, index)
                          r18 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure("}")
                          r18 = nil
                        end
                        s0 << r18
                        if r18
                          s19, i19 = [], index
                          loop do
                            i20, s20 = index, []
                            i21 = index
                            if has_terminal?("\\end", false, index)
                              r22 = instantiate_node(SyntaxNode,input, index...(index + 4))
                              @index += 4
                            else
                              terminal_parse_failure("\\end")
                              r22 = nil
                            end
                            if r22
                              r21 = nil
                            else
                              @index = i21
                              r21 = instantiate_node(SyntaxNode,input, index...index)
                            end
                            s20 << r21
                            if r21
                              if index < input_length
                                r23 = instantiate_node(SyntaxNode,input, index...(index + 1))
                                @index += 1
                              else
                                terminal_parse_failure("any character")
                                r23 = nil
                              end
                              s20 << r23
                            end
                            if s20.last
                              r20 = instantiate_node(SyntaxNode,input, i20...index, s20)
                              r20.extend(Figure1)
                            else
                              @index = i20
                              r20 = nil
                            end
                            if r20
                              s19 << r20
                            else
                              break
                            end
                          end
                          if s19.empty?
                            @index = i19
                            r19 = nil
                          else
                            r19 = instantiate_node(SyntaxNode,input, i19...index, s19)
                          end
                          s0 << r19
                          if r19
                            if has_terminal?("\\end{figure}", false, index)
                              r24 = instantiate_node(SyntaxNode,input, index...(index + 12))
                              @index += 12
                            else
                              terminal_parse_failure("\\end{figure}")
                              r24 = nil
                            end
                            s0 << r24
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(FigureNode,input, i0...index, s0)
      r0.extend(Figure2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:figure][start_index] = r0

    r0
  end

  module Caption0
  end

  def _nt_caption
    start_index = index
    if node_cache[:caption].has_key?(index)
      cached = node_cache[:caption][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      i2 = index
      if has_terminal?("}", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("}")
        r3 = nil
      end
      if r3
        r2 = nil
      else
        @index = i2
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r2
      if r2
        if index < input_length
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("any character")
          r4 = nil
        end
        s1 << r4
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Caption0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:caption][start_index] = r0

    r0
  end

  module Path0
  end

  def _nt_path
    start_index = index
    if node_cache[:path].has_key?(index)
      cached = node_cache[:path][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      i2 = index
      if has_terminal?("}", false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("}")
        r3 = nil
      end
      if r3
        r2 = nil
      else
        @index = i2
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r2
      if r2
        if index < input_length
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("any character")
          r4 = nil
        end
        s1 << r4
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Path0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:path][start_index] = r0

    r0
  end

  module Username0
  end

  def _nt_username
    start_index = index
    if node_cache[:username].has_key?(index)
      cached = node_cache[:username][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      i2 = index
      i3 = index
      if has_terminal?(" ", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(" ")
        r4 = nil
      end
      if r4
        r3 = r4
      else
        if has_terminal?("\n", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("\n")
          r5 = nil
        end
        if r5
          r3 = r5
        else
          @index = i3
          r3 = nil
        end
      end
      if r3
        r2 = nil
      else
        @index = i2
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r2
      if r2
        if index < input_length
          r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("any character")
          r6 = nil
        end
        s1 << r6
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Username0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:username][start_index] = r0

    r0
  end

  module Password0
  end

  def _nt_password
    start_index = index
    if node_cache[:password].has_key?(index)
      cached = node_cache[:password][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      i2 = index
      i3 = index
      if has_terminal?(" ", false, index)
        r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(" ")
        r4 = nil
      end
      if r4
        r3 = r4
      else
        if has_terminal?("\n", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("\n")
          r5 = nil
        end
        if r5
          r3 = r5
        else
          @index = i3
          r3 = nil
        end
      end
      if r3
        r2 = nil
      else
        @index = i2
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r2
      if r2
        if index < input_length
          r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("any character")
          r6 = nil
        end
        s1 << r6
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Password0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
    end

    node_cache[:password][start_index] = r0

    r0
  end

  module Part0
  end

  module Part1
  end

  def _nt_part
    start_index = index
    if node_cache[:part].has_key?(index)
      cached = node_cache[:part][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("\\part{", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure("\\part{")
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        if has_terminal?("}", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("}")
          r5 = nil
        end
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(Part0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      s0 << r2
      if r2
        if has_terminal?("}", false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("}")
          r7 = nil
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(PartNode,input, i0...index, s0)
      r0.extend(Part1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:part][start_index] = r0

    r0
  end

  module Chapter0
  end

  module Chapter1
  end

  def _nt_chapter
    start_index = index
    if node_cache[:chapter].has_key?(index)
      cached = node_cache[:chapter][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("\\chapter{", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("\\chapter{")
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        if has_terminal?("}", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("}")
          r5 = nil
        end
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(Chapter0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      s0 << r2
      if r2
        if has_terminal?("}", false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("}")
          r7 = nil
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(ChapterNode,input, i0...index, s0)
      r0.extend(Chapter1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:chapter][start_index] = r0

    r0
  end

  module Section0
    def section_start
      elements[0]
    end

    def heading
      elements[1]
    end

    def whitespace
      elements[3]
    end

    def show
      elements[4]
    end

    def entry
      elements[6]
    end
  end

  def _nt_section
    start_index = index
    if node_cache[:section].has_key?(index)
      cached = node_cache[:section][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_section_start
    s0 << r1
    if r1
      r2 = _nt_heading
      s0 << r2
      if r2
        if has_terminal?("}", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("}")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_whitespace
          s0 << r4
          if r4
            r6 = _nt_show
            if r6
              r5 = r6
            else
              r5 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r5
            if r5
              r8 = _nt_whitespace
              if r8
                r7 = r8
              else
                r7 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r7
              if r7
                r9 = _nt_entry
                s0 << r9
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SectionNode,input, i0...index, s0)
      r0.extend(Section0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:section][start_index] = r0

    r0
  end

  module Show0
    def username
      elements[0]
    end

    def spaces
      elements[1]
    end
  end

  module Show1
    def spaces1
      elements[1]
    end

    def spaces2
      elements[3]
    end

    def sequence
      elements[4]
    end

    def newline
      elements[5]
    end
  end

  def _nt_show
    start_index = index
    if node_cache[:show].has_key?(index)
      cached = node_cache[:show][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_spaces
      s0 << r2
      if r2
        if has_terminal?("show:", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 5))
          @index += 5
        else
          terminal_parse_failure("show:")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_spaces
          s0 << r4
          if r4
            s5, i5 = [], index
            loop do
              i6, s6 = index, []
              r7 = _nt_username
              s6 << r7
              if r7
                r8 = _nt_spaces
                s6 << r8
              end
              if s6.last
                r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
                r6.extend(Show0)
              else
                @index = i6
                r6 = nil
              end
              if r6
                s5 << r6
              else
                break
              end
            end
            if s5.empty?
              @index = i5
              r5 = nil
            else
              r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            end
            s0 << r5
            if r5
              r9 = _nt_newline
              s0 << r9
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(ShowNode,input, i0...index, s0)
      r0.extend(Show1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:show][start_index] = r0

    r0
  end

  module Entry0
  end

  def _nt_entry
    start_index = index
    if node_cache[:entry].has_key?(index)
      cached = node_cache[:entry][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      i2 = index
      r3 = _nt_non_entry
      if r3
        r2 = nil
      else
        @index = i2
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s1 << r2
      if r2
        i4 = index
        if has_terminal?("\\%", false, index)
          r5 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure("\\%")
          r5 = nil
        end
        if r5
          r4 = r5
        else
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          if r6
            r4 = r6
          else
            @index = i4
            r4 = nil
          end
        end
        s1 << r4
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Entry0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(EntryNode,input, i0...index, s0)
    end

    node_cache[:entry][start_index] = r0

    r0
  end

  module NonEntry0
  end

  def _nt_non_entry
    start_index = index
    if node_cache[:non_entry].has_key?(index)
      cached = node_cache[:non_entry][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_section_start
    if r1
      r0 = r1
    else
      r2 = _nt_chapter_start
      if r2
        r0 = r2
      else
        r3 = _nt_part_start
        if r3
          r0 = r3
        else
          i4, s4 = index, []
          i5 = index
          if has_terminal?("\\%", false, index)
            r6 = instantiate_node(SyntaxNode,input, index...(index + 2))
            @index += 2
          else
            terminal_parse_failure("\\%")
            r6 = nil
          end
          if r6
            r5 = nil
          else
            @index = i5
            r5 = instantiate_node(SyntaxNode,input, index...index)
          end
          s4 << r5
          if r5
            if has_terminal?("%", false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("%")
              r7 = nil
            end
            s4 << r7
          end
          if s4.last
            r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
            r4.extend(NonEntry0)
          else
            @index = i4
            r4 = nil
          end
          if r4
            r0 = r4
          else
            r8 = _nt_figure_start
            if r8
              r0 = r8
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:non_entry][start_index] = r0

    r0
  end

  def _nt_section_start
    start_index = index
    if node_cache[:section_start].has_key?(index)
      cached = node_cache[:section_start][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?("\\section{", false, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("\\section{")
      r0 = nil
    end

    node_cache[:section_start][start_index] = r0

    r0
  end

  def _nt_chapter_start
    start_index = index
    if node_cache[:chapter_start].has_key?(index)
      cached = node_cache[:chapter_start][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?("\\chapter{", false, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("\\chapter{")
      r0 = nil
    end

    node_cache[:chapter_start][start_index] = r0

    r0
  end

  def _nt_part_start
    start_index = index
    if node_cache[:part_start].has_key?(index)
      cached = node_cache[:part_start][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?("\\part{", false, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure("\\part{")
      r0 = nil
    end

    node_cache[:part_start][start_index] = r0

    r0
  end

  def _nt_figure_start
    start_index = index
    if node_cache[:figure_start].has_key?(index)
      cached = node_cache[:figure_start][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?("\\begin{figure}", false, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 14))
      @index += 14
    else
      terminal_parse_failure("\\begin{figure}")
      r0 = nil
    end

    node_cache[:figure_start][start_index] = r0

    r0
  end

  module Date0
  end

  module Date1
    def month
      elements[0]
    end

    def spaces1
      elements[1]
    end

    def day
      elements[2]
    end

    def spaces2
      elements[3]
    end

    def spaces3
      elements[7]
    end

    def year
      elements[8]
    end
  end
